--- a/index.html
+++ b/index.html
@@ -6,454 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Only Header</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #020224;
-            color: white;
-        }
-
-        header {
-            background-color: #030345;
-            position: sticky;
-            top: 0;
-            width: 100%;
-            z-index: 999;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-        }
-
-        .header-container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 1rem 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-
-        .logo {
-            font-size: 1.8rem;
-            font-weight: 600;
-            color: #fff;
-        }
-
-        /* Hidden checkbox for toggle */
-        #menu-toggle {
-            display: none;
-        }
-
-        .menu-icon {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-        }
-
-        .menu-icon span {
-            height: 3px;
-            width: 25px;
-            background: #fff;
-            margin: 4px 0;
-            transition: 0.3s;
-        }
-
-        nav ul {
-            display: flex;
-            gap: 2rem;
-            list-style: none;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: #f0f0f0;
-            position: relative;
-            font-weight: 500;
-            transition: color 0.3s;
-        }
-
-        nav ul li a::after {
-            content: '';
-            position: absolute;
-            bottom: -4px;
-            left: 0;
-            height: 2px;
-            width: 0%;
-            background-color: #86c5ff;
-            transition: width 0.3s ease;
-        }
-
-        nav ul li a:hover {
-            color: #86c5ff;
-        }
-
-        nav ul li a:hover::after {
-            width: 100%;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .menu-icon {
-                display: flex;
-            }
-
-            nav {
-                width: 100%;
-            }
-
-            nav ul {
-                flex-direction: column;
-                background-color: #030345;
-                width: 100%;
-                overflow: hidden;
-                max-height: 0;
-                transition: max-height 0.3s ease;
-            }
-
-            #menu-toggle:checked+.menu-icon+nav ul {
-                max-height: 300px;
-                padding: 1rem 0;
-            }
-
-            nav ul li {
-                text-align: center;
-                padding: 0.5rem 0;
-            }
-        }
-
-        main {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 100px 10%;
-            gap: 50px;
-            flex-wrap: wrap;
-        }
-
-        .main-left {
-            flex: 1;
-            min-width: 300px;
-        }
-
-        .main-left h1 {
-            font-size: 2.8rem;
-            line-height: 1.2;
-        }
-
-        .main-left h1 .purple {
-            color: #a259ff;
-        }
-
-        .main-left p {
-            font-size: 1.1rem;
-            color: #d2d2f7;
-            margin: 20px 0;
-        }
-
-        .buttons {
-            margin-top: 30px;
-        }
-
-        .btn {
-            padding: 12px 24px;
-            background-color: #86c5ff;
-            color: #020224;
-            font-weight: 600;
-            border: none;
-            border-radius: 5px;
-            margin-right: 15px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #a0d8ff;
-        }
-
-        .main-right {
-            flex: 1;
-            min-width: 300px;
-            text-align: center;
-        }
-
-        .main-right img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-        }
-
-        @media (max-width: 768px) {
-            main {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .buttons {
-                justify-content: center;
-            }
-
-            .btn {
-                margin-bottom: 10px;
-            }
-        }
-
-        .Second {
-            padding: 80px 10%;
-            background-color: #020224;
-            text-align: center;
-        }
-
-        .Second .text-grey {
-            color: #a1a1a1;
-            font-size: 1rem;
-        }
-
-        .Second h1 {
-            font-size: 2.5rem;
-            margin-bottom: 40px;
-            color: #ffffff;
-        }
-
-        .Box {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 30px;
-            margin-top: 30px;
-        }
-
-        .vertical {
-            background-color: #12122e;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            text-align: center;
-        }
-
-        .vertical:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-        }
-
-        .image-top {
-            width: 80px;
-            height: 80px;
-            margin-bottom: 20px;
-        }
-
-        .vertical-title {
-            font-size: 1.4rem;
-            font-weight: 600;
-            color: #a259ff;
-            margin-bottom: 10px;
-        }
-
-        .vertical-desc {
-            font-size: 1rem;
-            color: #d2d2f7;
-            line-height: 1.5;
-            margin-top: 10px;
-        }
-
-        @media (max-width: 768px) {
-            .Second h1 {
-                font-size: 2rem;
-            }
-
-            .Box {
-                grid-template-columns: 1fr;
-                padding: 20px;
-            }
-
-            .vertical-title {
-                font-size: 1.2rem;
-            }
-
-            .vertical-desc {
-                font-size: 0.95rem;
-            }
-        }
-
-        .Third {
-            padding: 80px 10%;
-            background-color: #020224;
-            text-align: center;
-        }
-
-        .Third h1 {
-            font-size: 2.5rem;
-            margin-bottom: 40px;
-            color: #ffffff;
-        }
-
-        .projects-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 40px;
-        }
-
-        .project-card {
-            background-color: #12122e;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            text-align: center;
-            position: relative;
-        }
-
-        .project-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-        }
-
-        .project-image {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-
-        .project-title {
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: #a259ff;
-            margin: 20px 0;
-        }
-
-        .project-description {
-            font-size: 1rem;
-            color: #d4d4d4;
-            line-height: 1.5;
-            margin-bottom: 20px;
-        }
-
-        .project-links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        .project-links a {
-            text-decoration: none;
-            font-size: 1rem;
-            font-weight: 600;
-            color: #86c5ff;
-            border: 2px solid #86c5ff;
-            padding: 10px 20px;
-            border-radius: 6px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .project-links a:hover {
-            background-color: #86c5ff;
-            color: #020224;
-        }
-
-        @media (max-width: 768px) {
-            .Third h1 {
-                font-size: 2rem;
-            }
-
-            .projects-container {
-                grid-template-columns: 1fr;
-                padding: 20px;
-            }
-
-            .project-title {
-                font-size: 1.3rem;
-            }
-
-            .project-description {
-                font-size: 0.95rem;
-            }
-
-            .project-links a {
-                font-size: 0.9rem;
-            }
-        }
-
-        footer {
-            background-color: #1e1e1e;
-            color: #f1f1f1;
-        }
-
-        .footer_container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 60px 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            gap: 40px;
-        }
-
-        .footer_section {
-            flex: 1 1 250px;
-            min-width: 200px;
-        }
-
-        .footer_section h2 {
-            margin-bottom: 20px;
-            font-size: 22px;
-            border-left: 4px solid #00c9a7;
-            padding-left: 10px;
-        }
-
-        .footer_section p,
-        .footer_section a {
-            color: #ccc;
-            font-size: 15px;
-            margin-bottom: 10px;
-            display: block;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .footer_section a:hover {
-            color: #00c9a7;
-        }
-
-        .social_links {
-            display: flex;
-            gap: 12px;
-            margin-top: 15px;
-        }
-
-        .social_links a img {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .social_links a img:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 8px #00c9a7;
-        }
-
-        .footer_bottom {
-            text-align: center;
-            background-color: #111;
-            padding: 20px;
-            font-size: 14px;
-            color: #aaa;
-            border-top: 1px solid #333;
-        }
-
-        @media (max-width: 768px) {
-            .footer_container {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
