--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
             <div class="buttons">
                 <button class="btn">Download Resume</button>
-                <button class="btn">Visit GitHub</button>
+                <a href="https://github.com/rajak-sarth11" target="_blank" rel="noopener noreferrer"><button class="btn">Visit GitHub</button></a>
             </div>
         </div>
 
@@ -195,11 +195,24 @@
             <div class="footer_section">
                 <h2>Follow Us</h2>
                 <div class="social_links">
-                    <a href="#"><img src="LinkedIn_icon.svg.png" alt="LinkedIn"></a>
-                    <a href="#"><img src="github.png" alt="GitHub"></a>
-                    <a href="#"><img src="leetcode.png" alt="LeetCode"></a>
-                    <a href="#"><img src="Hackerank.png" alt="HackerRank"></a>
-                    <a href="#"><img src="codechief.png" alt="CodeChef"></a>
+                    <a href="https://www.linkedin.com/in/sarth-rajak-644207300/" target="_blank"
+                        rel="noopener noreferrer"><img src="LinkedIn_icon.svg.png" alt="LinkedIn"> </a>
+                    <a href="https://github.com/rajak-sarth11" target="_blank" rel="noopener noreferrer"
+                        aria-label="GitHub profile">
+                        <img src="github.png" alt="GitHub icon"></a>
+
+                    <a href="https://leetcode.com/u/_Sarth_/" target="_blank" rel="noopener noreferrer"
+                        aria-label="LeetCode profile">
+                        <img src="leetcode.png" alt="LeetCode icon"></a>
+
+                    <a href="https://www.hackerrank.com/profile/rajak_sarth" target="_blank" rel="noopener noreferrer"
+                        aria-label="HackerRank profile">
+                        <img src="Hackerank.png" alt="HackerRank icon">
+                    </a>
+
+                    <a href="#" target="_blank" rel="noopener noreferrer" aria-label="CodeChef profile">
+                        <img src="codechief.png" alt="CodeChef icon">
+                    </a>
                 </div>
             </div>
         </div>
