--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
             <div class="buttons">
                 <button class="btn">Download Resume</button>
-                <a href="https://github.com/rajak-sarth11" target="_blank" rel="noopener noreferrer"><button class="btn">Visit GitHub</button></a>
+                <a href="https://github.com/rajak-sarth11" target="_blank"><button class="btn">Visit GitHub</button></a>
             </div>
         </div>
 
