--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#project">Project</a></li>
+                    <li><a href="#skills">About</a></li>
+                    <li><a href="#Fourth">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,22 +37,25 @@
         <div class="main-left">
             <h1>
                 Hi, I'm <span class="purple">Sarth</span><br />
-                A Passionate Web Developer
+                A Passionate Developer
             </h1>
             <p>
                 I design and build beautiful, fast, and responsive websites.<br />
                 Let’s create something amazing together.
             </p>
             <div class="buttons">
-                <button class="btn">Download Resume</button>
-                <a href="https://github.com/rajak-sarth11" target="_blank"><button class="btn">Visit GitHub</button></a>
+                <a href="Sarth Rajak _ Resume (1).pdf" download>
+                    <button class="btn">Download Resume</button>
+                </a>
+                <a href="https://github.com/rajak-sarth11" target="_blank" rel="noopener noreferrer"><button
+                        class="btn">Visit GitHub</button></a>
             </div>
         </div>
 
         <div class="main-right">
             <img src="port.PNG" alt="Sarth's photo" />
         </div>
-        <section class="Second">
+        <section class="Second" id="skills">
             <span class="text-grey">Skills I have mastered</span>
             <h1>Skills</h1>
             <div class="Box">
@@ -119,51 +121,50 @@
                 </div>
             </div>
         </section>
-        <section class="Third">
+        <section class="Third" id="project">
             <h1>My Projects</h1>
             <div class="projects-container">
                 <!-- Project 1 -->
                 <div class="project-card">
-                    <img class="project-image" src="project1.jpg" alt="Project 1" />
-                    <div class="project-title">Project One</div>
+                    <img class="project-image" src="hotel.png" alt="Project 1" />
+                    <div class="project-title">Hotel management system</div>
                     <div class="project-description">
-                        This is a short description of Project One. It features modern web technologies and dynamic
-                        features for an
-                        interactive user experience.
+                        A Hotel Management System built with Python and MySQL is a sophisticated application designed to
+                        streamline hotel operations such as reservations, guest check-ins/check-outs, and billing. It
+                        leverages Python for robust logic handling and MySQL for efficient, structured data management.
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/your-username/project1" target="_blank">GitHub</a>
-                        <a href="https://yourprojectlink.com" target="_blank">Live Demo</a>
+                        <a href="https://github.com/rajak-sarth11/Hotel-management-System" target="_blank">GitHub</a>
+                        <!-- <a href="https://yourprojectlink.com" target="_blank">Live Demo</a> -->
                     </div>
                 </div>
 
                 <!-- Project 2 -->
                 <div class="project-card">
-                    <img class="project-image" src="project2.jpg" alt="Project 2" />
-                    <div class="project-title">Project Two</div>
+                    <img class="project-image" src="ecommerce.png" alt="Project 2" />
+                    <div class="project-title">ECommerce Website</div>
                     <div class="project-description">
-                        Project Two is an innovative application that solves a specific problem with an intuitive design
-                        and smooth
-                        functionality.
+                        Developed a fully responsive eCommerce website that allows users to browse products, add items
+                        to a shopping cart, and complete purchases through secure payment gateways.
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/your-username/project2" target="_blank">GitHub</a>
-                        <a href="https://yourprojectlink.com" target="_blank">Live Demo</a>
+                        <a href="https://github.com/rajak-sarth11/ECommerce-website" target="_blank">GitHub</a>
+                        <a href="https://rajak-sarth11.github.io/ECommerce-website/" target="_blank">Live Demo</a>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
                 <div class="project-card">
-                    <img class="project-image" src="project3.jpg" alt="Project 3" />
-                    <div class="project-title">Project Three</div>
+                    <img class="project-image" src="cal.png" alt="Project 3" />
+                    <div class="project-title">Calculator</div>
                     <div class="project-description">
-                        This project showcases my skills in advanced technologies. It is designed to handle complex data
-                        and present
-                        it in an intuitive format.
+                        This is a modern, sleek, and user-friendly calculator web app built using HTML, CSS, and
+                        JavaScript. The project combines clean, minimal design with smooth interactive functionality to
+                        deliver a seamless user experience.
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/your-username/project3" target="_blank">GitHub</a>
-                        <a href="https://yourprojectlink.com" target="_blank">Live Demo</a>
+                        <a href="https://github.com/rajak-sarth11/project_calculator" target="_blank">GitHub</a>
+                        <a href="https://rajak-sarth11.github.io/project_calculator/" target="_blank">Live Demo</a>
                     </div>
                 </div>
 
@@ -173,53 +174,57 @@
 
     </main>
     <footer>
-        <div class="footer_container">
-            <!-- Contact -->
-            <div class="footer_section">
-                <h2>Contact Us</h2>
-                <p>Phone: 8839761950</p>
-                <p>Email: rajak.sarth@gmail.com</p>
-                <p>Location: Your City, Country</p>
-            </div>
+        <section id="Fourth">
+            <div class="footer_container">
+                <!-- Contact -->
+                <div class="footer_section">
+                    <h2>Contact Us</h2>
+                    <p>Phone: 8839761950</p>
+                    <p>Email: rajaksarth57@gmail.com</p>
+                    <p>Location: Indore, Madhya pradesh</p>
+                </div>
 
-            <!-- Quick Links -->
-            <div class="footer_section">
-                <h2>Quick Links</h2>
-                <a href="#">Home</a>
-                <a href="#">Projects</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </div>
+                <!-- Quick Links -->
+                <div class="footer_section">
+                    <h2>Quick Links</h2>
+                    <a href="#">Home</a>
+                    <a href="#project">Projects</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#Fourth">Contact</a>
+                </div>
 
-            <!-- Follow Us -->
-            <div class="footer_section">
-                <h2>Follow Us</h2>
-                <div class="social_links">
-                    <a href="https://www.linkedin.com/in/sarth-rajak-644207300/" target="_blank"
-                        rel="noopener noreferrer"><img src="LinkedIn_icon.svg.png" alt="LinkedIn"> </a>
-                    <a href="https://github.com/rajak-sarth11" target="_blank" rel="noopener noreferrer"
-                        aria-label="GitHub profile">
-                        <img src="github.png" alt="GitHub icon"></a>
+                <!-- Follow Us -->
+                <div class="footer_section">
+                    <h2>Follow Us</h2>
+                    <div class="social_links">
+                        <!-- <a href="https://www.linkedin.com/in/sarth-rajak-644207300/"><img src="LinkedIn_icon.svg.png" alt="LinkedIn"></a> -->
+                        <a href="https://www.linkedin.com/in/sarth-rajak-644207300/" target="_blank"
+                            rel="noopener noreferrer"><img src="LinkedIn_icon.svg.png" alt="LinkedIn"> </a>
+                        <a href="https://github.com/rajak-sarth11" target="_blank" rel="noopener noreferrer"
+                            aria-label="GitHub profile">
+                            <img src="github.png" alt="GitHub icon"></a>
 
-                    <a href="https://leetcode.com/u/_Sarth_/" target="_blank" rel="noopener noreferrer"
-                        aria-label="LeetCode profile">
-                        <img src="leetcode.png" alt="LeetCode icon"></a>
+                        <a href="https://leetcode.com/u/_Sarth_/" target="_blank" rel="noopener noreferrer"
+                            aria-label="LeetCode profile">
+                            <img src="leetcode.png" alt="LeetCode icon"></a>
 
-                    <a href="https://www.hackerrank.com/profile/rajak_sarth" target="_blank" rel="noopener noreferrer"
-                        aria-label="HackerRank profile">
-                        <img src="Hackerank.png" alt="HackerRank icon">
-                    </a>
+                        <a href="https://www.hackerrank.com/profile/rajak_sarth" target="_blank"
+                            rel="noopener noreferrer" aria-label="HackerRank profile">
+                            <img src="Hackerank.png" alt="HackerRank icon">
+                        </a>
 
-                    <a href="#" target="_blank" rel="noopener noreferrer" aria-label="CodeChef profile">
-                        <img src="codechief.png" alt="CodeChef icon">
-                    </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" aria-label="CodeChef profile">
+                            <img src="codechief.png" alt="CodeChef icon">
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="footer_bottom">
-            © 2025 www.sarth.com — All rights reserved.
-        </div>
+            <div class="footer_bottom">
+                © 2025 www.sarth.com — All rights reserved.
+            </div>
+        </section>
     </footer>
+
 
 
 </body>
